feat: Update new UI merchant page

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,10 @@
             href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Aclonica&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap"
+            rel="stylesheet"
+        />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     </head>
